# cv

./: .gitignore  CNAME  _config.yml  create_pdf_from_md.py  create_pdf_from_website.py  index.html  index.md  pyproject.toml  site.webmanifest
