[tool.poetry]
name = "maziar-is-a-dev"
version = "0.1.0"
description = ""
authors = ["MaziarHeidari2003 <maziarheidari1124@gmail.com>"]
readme = "README.md"
packages = [{include = "maziar"}]

[tool.poetry.dependencies]
python = "^3.12"
pypandoc = "^1.17"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
